

0.16 (unreleased)
-----------------

- Changed the form to change period.
- Fixed the bug that caused the legend of the phosphate impact graph to list
  the name of the label instead of the name of the intake or pump (ticket
  2542).
- Fixed the ordering of the locations in the Admin screen to modify an existing
  time series FEWS or add a new one (ticket 2605).
- In the legend of the cumulative discharge graph, added the text " (berekend)"
  to the names of the pumping stations of the computed level control to clarify
  their meaning (ticket 2611).
- Fixed the bug that caused the drawing of the waterbalance graph to fail
  although the calculation ended successfully (ticket 2650)
- Fixed the bug that caused the legend of the waterbalance graph to list an
  incorrect name for a pump that is not for level control (ticket 2651).
- Fixed the bug that caused the legend of the fraction chloride graph to list
  the name of the label instead of the name of the intake (ticket 2666).


0.15 (2011-04-19)
-----------------

- Improved the cache mechanism to be able to handle more performant cache
  backends (read memcached).
- Fixed the bug that caused an integrity error when the user tried to add a
  previously removed concentration (ticket 2572).
- Fixed the bug that caused the computation to abort because the required time
  series for the water level computation are not present (tickets 2543 and
  2576).
- Fixed the bug that caused the concentrations of a configurations to be
  created only after the second time the configuration was saved (ticket 2547)
- Fixed a bug that prevented the save to the database of a new WaterbalanceConf.
- Fixed a bug in TimeseriesFews, which prevented the retrieval of the last
  event of a time series.
- Enhanced TimeseriesFews so it can also handle events that have a valid date
  but have None for a value.
- Upgraded timeseries to 0.5.


0.14 (2011-04-06)
-----------------
